--- a/Uebung02/Uebung02.vcxproj.filters
+++ b/Uebung02/Uebung02.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Vektor2D.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Gerade2D.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
@@ -36,6 +39,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Vektor2D.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Gerade2D.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
