--- a/Uebung02/Uebung02.vcxproj.filters
+++ b/Uebung02/Uebung02.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="geradenTest.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="MatrixMult.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="matrixTest.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
