--- a/Uebung02/Uebung02.vcxproj
+++ b/Uebung02/Uebung02.vcxproj
@@ -69,6 +69,8 @@
     <ClCompile Include="geradenTest.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="MatrixMult.cpp" />
+    <ClCompile Include="matrixTest.cpp" />
     <ClCompile Include="Vektor.cpp" />
     <ClCompile Include="Vektor2D.cpp" />
   </ItemGroup>
