--- a/Uebung02/Uebung02.vcxproj.filters
+++ b/Uebung02/Uebung02.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="matrixTest.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Funktion2D.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
@@ -51,6 +54,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Gerade2D.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Funktion2D.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
