--- a/Uebung02/Uebung02.vcxproj.filters
+++ b/Uebung02/Uebung02.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Funktion2D.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="NSFunktion2D.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
@@ -57,6 +60,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Funktion2D.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="NSFunktion2D.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
